--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,4 @@ key_mime_pi_repo: https://github.com/mtlynch/key-mime-pi.git
 key_mime_pi_interface: '0.0.0.0'
 key_mime_pi_port: 8000
 key_mime_pi_hid_path: /dev/hidg0
+key_mime_pi_initialize_hid_script_path: /opt/enable-rpi-hid
