Setting role name in meta/main.yml

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
   galaxy_info:
+    role_name: key_mime_pi
     author: Michael Lynch
     description: Use your Raspberry Pi as a virtual keyboard
     license: MIT
