--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,18 +4,18 @@
     author: Michael Lynch
     description: Use your Raspberry Pi as a virtual keyboard
     license: MIT
-  
+
     min_ansible_version: 2.8
-  
+
     platforms:
       - name: Debian
         versions:
           - buster
-      
+
     galaxy_tags:
-      - raspberry pi
-      - usb hid
+      - raspberrypi
+      - usb
+      - hid
       - oss
-  
+
   dependencies: []
-  
