Adding molecule + CircleCI (#1)
* Adding molecule + CircleCI

* Fixing machine build config

* Switching to Ubuntu machine image

* Adding python3.7 installation

* Fixing YAML

* Fixing build YAML

* Getting rid of project cd

* Adding docker dependency

* Fixing paths

* Replacing env variables in working_directory

* Updating symlink

* Updating symlink

* Updating symlink

* Updating symlink

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,8 +9,9 @@
     state: present
   vars:
     packages:
-    - python-pip
-    - python3-venv
+      - git
+      - python-pip
+      - python3-venv
 
 - name: create keymimepi group
   group:
@@ -42,7 +43,7 @@
 - name: create Key Mime Pi virtualenv
   pip:
     virtualenv: "{{ key_mime_pi_dir }}/venv"
-    virtualenv_python: python3.7
+    virtualenv_command: python3 -m venv venv
     requirements: "{{ key_mime_pi_dir }}/requirements.txt"
   notify:
     - restart Key Mime Pi
