--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: install HID USB gadget
   import_tasks: install_usb_gadget.yml
-  when: ansible_architecture == "armv7l"
+  when: ansible_architecture.startswith("armv")
 
 - name: install Key Mime Pi pre-requisite packages
   apt:
