Ensure dwc2 modules are written properly (#10)

--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -2,14 +2,15 @@
 - name: enable dwc2 driver in boot config
   lineinfile:
     path: /boot/config.txt
-    create: yes
+    create: no
     regexp: '^dtoverlay='
+    insertafter: '^\[all\]'
     line: dtoverlay=dwc2
 
 - name: enable dwc2 driver in modules
   lineinfile:
     path: /etc/modules
-    create: yes
+    create: no
     line: dwc2
 
 - name: copy HID initializer script
