--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
-key_mime_pi_group: keymimepi
-key_mime_pi_user: keymimepi
-key_mime_pi_dir: /opt/key-mime-pi
-key_mime_pi_repo: https://github.com/mtlynch/key-mime-pi.git
-key_mime_pi_interface: '0.0.0.0'
-key_mime_pi_port: 8000
-key_mime_pi_hid_path: /dev/hidg0
-key_mime_pi_initialize_hid_script_path: /opt/enable-rpi-hid
+kvmpi_group: kvmpi
+kvmpi_user: kvmpi
+kvmpi_dir: /opt/kvmpi
+kvmpi_repo: https://github.com/mtlynch/kvmpi.git
+kvmpi_interface: '0.0.0.0'
+kvmpi_port: 8000
+kvmpi_hid_path: /dev/hidg0
+kvmpi_initialize_hid_script_path: /opt/enable-rpi-hid
