--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
   galaxy_info:
-    role_name: keymimepi
+    role_name: kvmpi
     author: Michael Lynch
     description: Use your Raspberry Pi as a virtual keyboard
     license: MIT
