--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
             . venv/bin/activate && \
             pip install --upgrade pip && \
             pip install docker molecule[lint] molecule[docker] && \
+            pip install ansible && \
+            ansible-galaxy install --role-file molecule/default/requirements.yml && \
             molecule test
 workflows:
   version: 2
