--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,7 +4,7 @@
     name: kvmpi
     daemon_reload: yes
 
-- name: restart KVM Pi
+- name: restart KVM Pi service
   service:
     name: kvmpi
     state: restarted
