Clarifying service restart name (#3)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,7 +45,7 @@
     version: master
     accept_hostkey: yes
   notify:
-    - restart KVM Pi
+    - restart KVM Pi service
 
 - name: create KVM Pi virtualenv
   pip:
@@ -53,7 +53,7 @@
     virtualenv_command: python3 -m venv venv
     requirements: "{{ kvmpi_dir }}/requirements.txt"
   notify:
-    - restart KVM Pi
+    - restart KVM Pi service
 
 - name: fix KVM Pi folder permissions
   file:
@@ -71,7 +71,7 @@
     mode: '0644'
   notify:
     - reload KVM Pi systemd config
-    - restart KVM Pi
+    - restart KVM Pi service
 
 - name: enable systemd KVM Pi service file
   systemd:
