--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,10 @@
 ---
-kvmpi_group: kvmpi
-kvmpi_user: kvmpi
-kvmpi_dir: /opt/kvmpi
-kvmpi_repo: https://github.com/mtlynch/kvmpi.git
-kvmpi_repo_branch: master
-kvmpi_interface: '0.0.0.0'
-kvmpi_port: 8000
-kvmpi_hid_path: /dev/hidg0
-kvmpi_initialize_hid_script_path: /opt/enable-rpi-hid
+tinypilot_group: tinypilot
+tinypilot_user: tinypilot
+tinypilot_dir: /opt/tinypilot
+tinypilot_repo: https://github.com/mtlynch/tinypilot.git
+tinypilot_repo_branch: master
+tinypilot_interface: '0.0.0.0'
+tinypilot_port: 8000
+tinypilot_hid_path: /dev/hidg0
+tinypilot_initialize_hid_script_path: /opt/enable-rpi-hid
