--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: kvmpi
+  role_name: tinypilot
   author: Michael Lynch
   description: Use your Raspberry Pi as a virtual keyboard
   license: MIT
@@ -36,11 +36,11 @@ dependencies:
       nginx_vhosts:
         - listen: "80 default_server"
           server_name: "KVMPi"
-          root: "{{ kvmpi_dir }}"
+          root: "{{ tinypilot_dir }}"
           index: "index.html"
           extra_parameters: |
             location /socket.io {
-              proxy_pass http://localhost:{{ kvmpi_port }};
+              proxy_pass http://localhost:{{ tinypilot_port }};
               proxy_http_version 1.1;
               proxy_set_header Upgrade $http_upgrade;
               proxy_set_header Connection "Upgrade";
@@ -53,9 +53,9 @@ dependencies:
               proxy_pass http://localhost:{{ ustreamer_port }};
             }
             location / {
-              proxy_pass http://localhost:{{ kvmpi_port }};
+              proxy_pass http://localhost:{{ tinypilot_port }};
             }
             location ~* ^/.+\.(html|js|css|jpeg|png|ico)$ {
-              root "{{ kvmpi_dir }}/app/static";
+              root "{{ tinypilot_dir }}/app/static";
             }
       nginx_remove_default_vhost: true
