--- a/meta/main.yml
+++ b/meta/main.yml
@@ -37,16 +37,21 @@ dependencies:
       ustreamer_port: 8001
       nginx_vhosts:
         - listen: "80 default_server"
-          server_name: "KVMPi"
+          server_name: "tinypilot"
+          # This would ideally be named tinypilot.conf but to change it now
+          # breaks existing installs.
+          filename: "KVMPi.conf"
           root: "{{ tinypilot_dir }}"
           index: "index.html"
           extra_parameters: |
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_http_version 1.1;
+
             location /socket.io {
               proxy_pass http://localhost:{{ tinypilot_port }};
-              proxy_http_version 1.1;
               proxy_set_header Upgrade $http_upgrade;
               proxy_set_header Connection "Upgrade";
-              proxy_set_header Host $host;
             }
             location /state {
               proxy_pass http://localhost:{{ ustreamer_port }};
@@ -57,7 +62,7 @@ dependencies:
             location / {
               proxy_pass http://localhost:{{ tinypilot_port }};
             }
-            location ~* ^/.+\.(html|js|css|jpeg|png|ico)$ {
+            location ~* ^/.+\.(html|js|js.map|css|jpeg|png|ico)$ {
               root "{{ tinypilot_dir }}/app/static";
             }
       nginx_remove_default_vhost: true
