--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,7 +50,7 @@
 - name: create TinyPilot virtualenv
   pip:
     virtualenv: "{{ tinypilot_dir }}/venv"
-    virtualenv_command: python3 -m venv venv
+    virtualenv_command: "{{ ansible_python_interpreter }} -m venv venv"
     requirements: "{{ tinypilot_dir }}/requirements.txt"
   notify:
     - restart TinyPilot service
