--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -47,10 +47,19 @@
   notify:
     - restart TinyPilot service
 
+- name: find absolute path to python3
+  shell: realpath $(which python3)
+  register: realpath_python3
+  changed_when: false
+
+- name: save absolute path to python3
+  set_fact:
+    python3_abs_path: "{{ realpath_python3.stdout }}"
+
 - name: create TinyPilot virtualenv
   pip:
     virtualenv: "{{ tinypilot_dir }}/venv"
-    virtualenv_command: python3 -m venv venv
+    virtualenv_command: "{{ python3_abs_path }} -m venv venv"
     requirements: "{{ tinypilot_dir }}/requirements.txt"
   notify:
     - restart TinyPilot service
