Delete enable-rpi-hid and adopt keyboard syntax
enable-rpi-hid has moved to the core tinypilot repo, so it's no longer needed here. Also, the tinypilot repo has unmerged the language of 'keyboard' and 'hid', so we're changing this repo to match.

Related:

* https://github.com/mtlynch/tinypilot/pull/121
* https://github.com/mtlynch/tinypilot/pull/122

--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -11,15 +11,7 @@
     create: no
     line: dwc2
 
-- name: copy HID initializer script
-  copy:
-    src: enable-rpi-hid
-    dest: "{{ tinypilot_initialize_hid_script_path }}"
-    owner: root
-    group: root
-    mode: '0744'
-
-- name: install HID initializer as a service
+- name: install usb-gadget initializer as a service
   template:
     src: usb-gadget.systemd.j2
     dest: /lib/systemd/system/usb-gadget.service
@@ -27,7 +19,7 @@
     group: root
     mode: '0644'
 
-- name: enable systemd HID initializer service file
+- name: enable systemd usb-gadget initializer service file
   systemd:
     name: usb-gadget
     enabled: yes
