--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,5 +6,4 @@ tinypilot_repo: https://github.com/mtlynch/tinypilot.git
 tinypilot_repo_branch: master
 tinypilot_interface: '127.0.0.1'
 tinypilot_port: 8000
-tinypilot_hid_path: /dev/hidg0
-tinypilot_initialize_hid_script_path: /opt/enable-rpi-hid
+tinypilot_keyboard_interface: /dev/hidg0
