Switch from localhost to 127.0.0.1
Apparently localhost doesn't play nicely with IPv6, but 127.0.0.1 does:

Related: https://github.com/mtlynch/tinypilot/issues/130#issuecomment-674296653

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -36,10 +36,10 @@ dependencies:
       nginx_upstreams:
         - name: tinypilot
           servers:
-            - "localhost:{{ tinypilot_port }} fail_timeout=1s max_fails=600"
+            - "127.0.0.1:{{ tinypilot_port }} fail_timeout=1s max_fails=600"
         - name: ustreamer
           servers:
-            - "localhost:{{ ustreamer_port }} fail_timeout=1s max_fails=600"
+            - "127.0.0.1:{{ ustreamer_port }} fail_timeout=1s max_fails=600"
       nginx_vhosts:
         - listen: "80 default_server"
           server_name: "tinypilot"
