--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,3 +7,4 @@ tinypilot_repo_branch: master
 tinypilot_interface: '127.0.0.1'
 tinypilot_port: 8000
 tinypilot_keyboard_interface: /dev/hidg0
+tinypilot_skip_gadget_setup: no
