--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -1,9 +1,15 @@
 ---
+- name: check for a boot config file
+  stat:
+    path: /boot/config.txt
+  register: boot_config_stat
+
 - name: enable dwc2 driver in boot config
   lineinfile:
     path: /boot/config.txt
     create: no
     line: dtoverlay=dwc2
+  when: boot_config_stat.stat.exists
 
 - name: enable dwc2 driver in modules
   lineinfile:
