--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,12 @@ tinypilot_user: tinypilot
 tinypilot_dir: /opt/tinypilot
 tinypilot_repo: https://github.com/mtlynch/tinypilot.git
 tinypilot_repo_branch: master
+# Port on which TinyPilot frontend listens (accessible from other hosts on the
+# network).
+tinypilot_external_port: 80
 tinypilot_interface: '127.0.0.1'
+# Port on which TinyPilot's backend listens (accessible only from
+# tinypilot_interface).
 tinypilot_port: 8000
 tinypilot_keyboard_interface: /dev/hidg0
 tinypilot_provision_usb_gadget: yes
