Add support for mouse interface setting

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,4 +12,5 @@ tinypilot_interface: '127.0.0.1'
 # tinypilot_interface).
 tinypilot_port: 8000
 tinypilot_keyboard_interface: /dev/hidg0
+tinypilot_mouse_interface: /dev/hidg1
 tinypilot_provision_usb_gadget: yes
