--- a/meta/main.yml
+++ b/meta/main.yml
@@ -49,7 +49,7 @@ dependencies:
             proxy_buffers 16 16k;
             proxy_buffer_size 16k;
             proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_http_version 1.1;
 
             location /socket.io {
