--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,8 +4,8 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: instance
-    image: geerlingguy/docker-debian9-ansible
+  - name: debian9
+    image: mtlynch/debian9-ansible:2.9.13
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
@@ -13,6 +13,7 @@ platforms:
     pre_build_image: true
 provisioner:
   name: ansible
+  log: true
 verifier:
   name: ansible
 scenario:
