Print versions of ansible and molecule during CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
             pip install ansible==2.9.10 && \
             pip install docker==4.2.2 molecule[lint]==3.0.6 molecule[docker]==3.0.6 && \
             ansible-galaxy install --role-file molecule/default/requirements.yml && \
+            ansible --version && \
+            molecule --version && \
             molecule test
 workflows:
   version: 2
