Add variable to enable debug logging

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,4 +14,5 @@ tinypilot_port: 8000
 tinypilot_keyboard_interface: /dev/hidg0
 tinypilot_mouse_interface: /dev/hidg1
 tinypilot_keyboard_layout: qwerty
+tinypilot_enable_debug_logging: no
 tinypilot_provision_usb_gadget: yes
