Expose /snapshot endpoint of ustreamer
This will facilitate adding "save screenshot" functionality in TinyPilot.

See: https://github.com/mtlynch/tinypilot/issues/313

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -63,6 +63,9 @@ dependencies:
             location /stream {
               proxy_pass http://ustreamer;
             }
+            location /snapshot {
+              proxy_pass http://ustreamer;
+            }
             location / {
               proxy_pass http://tinypilot;
             }
