Call dependent roles explicitly
Change to include dependent roles explicitly through tasks rather than relying on ansible-galaxy to install them implicitly through meta/main.yml.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: install uStreamer
+  import_tasks: ustreamer.yml
+
+- name: install nginx
+  import_tasks: nginx.yml
+
 - name: install HID USB gadget
   import_tasks: install_usb_gadget.yml
   when: tinypilot_provision_usb_gadget
