Fix import_role plays

--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,6 +1,7 @@
 ---
 - name: import nginx role
-  import_role: geerlingguy.nginx
+  import_role:
+    name: geerlingguy.nginx
   vars:
     ustreamer_port: 8001
     nginx_upstreams:
