Move init-usb-gadget to this repository
The init-usb-gadget script used to live in the TinyPilot repo, now they
live under `scripts/usb-gadget/`.

This fixes #67 security concerns by changing the file mode to 700 and
owner/group to root.

A few changes were made:

1. `tasks/install_usb_gadget.yml` now contains the steps to create the
new `/opt/tinypilot-privileged` directory and populate it with the
`init-usb-gadget` file.
2. `templates/usb-gadget.systemd.j2` now points to the new
`/opt/tinypilot-privileged` location
3. `defaults/main.yml` received new entries to make the job under
`tasks/install_usb_gadget.yml` easier.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,8 @@
 tinypilot_group: tinypilot
 tinypilot_user: tinypilot
 tinypilot_dir: /opt/tinypilot
+init_usb_gadget_path: /opt/tinypilot-updater/mtlynch.tinypilot/scripts/usb-gadget/init-usb-gadget
+final_init_usb_gadget_path: /opt/tinypilot-privileged/init-usb-gadget
 tinypilot_repo: https://github.com/mtlynch/tinypilot.git
 tinypilot_repo_branch: master
 # Port on which TinyPilot frontend listens (accessible from other hosts on the
