Move init-usb-gadget to the default "files" folder
This stops the assumption of where the role files will live.

This resulted in a lot of simplification:

* usb-gadget initializer is now copied with "copy" instead of "mv"
* because of this, tasks like "create /opt/tinypilot-privileged" and
"force mode 700" doesn't have to exist anymore.
* /opt/tinypilot-privileged is now under its on variable to avoid
having to use a magic string
* we don't need variables like "init_usb_gadget_path" or
"final_init_usb_gadget_path".

--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -23,24 +23,10 @@
     line: dwc2
   when: etc_modules_stat.stat.exists
 
-- name: create /opt/tinypilot-privileged/ path
-  file:
-    path: /opt/tinypilot-privileged
-    state: directory
-    mode: '0755'
-
-- name: check for a init-usb-gadget file
-  stat:
-    path: "{{ init_usb_gadget_path }}"
-  register: init_usb_gadget_stat
-
-- name: move usb-gadget initializer
-  command: "mv {{ init_usb_gadget_path }} {{ final_init_usb_gadget_path }}"
-  when: init_usb_gadget_stat.stat.exists
-
-- name: force mode 700 on init-usb-gadget
-  file:
-    path: "{{ final_init_usb_gadget_path }}"
+- name: copy usb-gadget initializer
+  copy:
+    src: init-usb-gadget
+    dest: "{{ tinypilot_privileged_dir }}/init-usb-gadget"
     owner: root
     group: root
     mode: '0700'
