Move init-usb-gadget to this repository (#68)
* Move init-usb-gadget to this repository

The init-usb-gadget script used to live in the TinyPilot repo, now they
live under `scripts/usb-gadget/`.

This fixes #67 security concerns by changing the file mode to 700 and
owner/group to root.

A few changes were made:

1. `tasks/install_usb_gadget.yml` now contains the steps to create the
new `/opt/tinypilot-privileged` directory and populate it with the
`init-usb-gadget` file.
2. `templates/usb-gadget.systemd.j2` now points to the new
`/opt/tinypilot-privileged` location
3. `defaults/main.yml` received new entries to make the job under
`tasks/install_usb_gadget.yml` easier.

* Move init-usb-gadget to the default "files" folder

This stops the assumption of where the role files will live.

This resulted in a lot of simplification:

* usb-gadget initializer is now copied with "copy" instead of "mv"
* because of this, tasks like "create /opt/tinypilot-privileged" and
"force mode 700" doesn't have to exist anymore.
* /opt/tinypilot-privileged is now under its on variable to avoid
having to use a magic string
* we don't need variables like "init_usb_gadget_path" or
"final_init_usb_gadget_path".

* Remove \n from the end in install_usb_gadget

--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -23,6 +23,14 @@
     line: dwc2
   when: etc_modules_stat.stat.exists
 
+- name: copy usb-gadget initializer
+  copy:
+    src: init-usb-gadget
+    dest: "{{ tinypilot_privileged_dir }}/init-usb-gadget"
+    owner: root
+    group: root
+    mode: '0700'
+
 - name: install usb-gadget initializer as a service
   template:
     src: usb-gadget.systemd.j2
