Fix naming of check_whitespace job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  check-whitespace:
+  check_whitespace:
     docker:
       - image: cimg/base:2020.01
     steps:
@@ -39,5 +39,5 @@ workflows:
   version: 2
   all-tests:
     jobs:
-      - check-whitespace
+      - check_whitespace
       - build
