Update platforms metadata

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,6 +11,9 @@ galaxy_info:
     - name: Debian
       versions:
         - buster
+    - name: Ubuntu
+      versions:
+        - bionic
 
   galaxy_tags:
     - raspberrypi
