Add an allow_restart variable
When TinyPilot performs a self-update, it shouldn't cause the server to restart, so we need a way to avoid a forced server reboot.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,5 @@ tinypilot_keyboard_interface: /dev/hidg0
 tinypilot_mouse_interface: /dev/hidg1
 tinypilot_enable_debug_logging: no
 tinypilot_pip_args: ""
+# Controls whether the role can restart the TinyPilot service.
+tinypilot_allow_restart: yes
