Modify the sudoers file more cleanly
Ensure that we don't create extra lines and validate it's a valid sudoers file before saving.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,6 +70,8 @@
     dest: /etc/sudoers
     state: present
     line: "{{ tinypilot_user }} ALL=(ALL) NOPASSWD: {{ sudo_paths | join(', ') }}"
+    regexp: "^{{ tinypilot_user }}"
+    validate: sudo /usr/sbin/visudo -cf %s
 
 - name: create TinyPilot folder
   file:
