Add TinyPilot update service

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -8,3 +8,10 @@
   service:
     name: tinypilot
     state: restarted
+
+- name: reload tinypilot updater systemd config
+  systemd:
+    name: tinypilot-updater
+    daemon_reload: yes
+    # Never run automatically.
+    enabled: no
