--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,21 +42,17 @@
     system: yes
     create_home: no
 
-- name: copy update script
+- name: copy admin scripts
   copy:
-    src: update
-    dest: "{{ tinypilot_privileged_dir }}/update"
-    owner: root
-    group: root
-    mode: '0700'
-
-- name: copy debug log collection script
-  copy:
-    src: collect-debug-logs
-    dest: "{{ tinypilot_privileged_dir }}/collect-debug-logs"
+    src: "{{ item }}"
+    dest: "{{ tinypilot_privileged_dir }}/{{ item }}"
     owner: root
     group: root
     mode: '0755'
+  with_items:
+    - collect-debug-logs
+    - read-update-log
+    - update
 
 - name: store passwordless sudo paths
   set_fact:
@@ -65,6 +61,7 @@
       - /usr/sbin/service tinypilot-updater start
       - "{{ tinypilot_privileged_dir }}/update"
       - "{{ tinypilot_privileged_dir }}/collect-debug-logs"
+      - "{{ tinypilot_privileged_dir }}/read-update-log"
 
 - name: enable tinypilot to execute a whitelist of commands as sudo
   lineinfile:
