--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,8 @@ jobs:
           command: |
             . venv/bin/activate && \
             pip install --upgrade pip && \
-            pip install ansible==2.9.10 && \
-            pip install docker==4.2.2 molecule[lint]==3.0.6 molecule[docker]==3.0.6 && \
-            ansible-galaxy install --role-file requirements.yml && \
+            pip install wheel==0.34.2 && \
+            pip install -r molecule/requirements.txt && \
             ansible --version && \
             molecule --version && \
             molecule test
