--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             pip install -r molecule/requirements.txt && \
             ansible --version && \
             molecule --version && \
+            ansible-galaxy install --role-file requirements.yml && \
             molecule test
 workflows:
   version: 2
